# api-webscriping-python

./: .gitignore  .prettierrc.json  README.md  app.js  package-lock.json  package.json  tailwind.config.js
components/preload/: preload.js
components/renderer/: renderer.js
logs/: CHANGELOG.md
public/css/: styles.css  tailwind.css
scripts/: main.py  pyproject.toml  requirements.txt
scripts/utils/: handle_csv.py  handle_data.py  handle_json.py
views/: index.html
