[tool.poetry]
name = "fake-data-generator"
version = "0.1.0"
description = "python application"
authors = ["HenriHTTP <zegordoplays123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "30.4.0"
mypy = "1.11.2"
mypy-extensions = "1.0.0"
numpy = "2.1.2"
pandas = "2.2.3"
py4j = "0.10.9.7"
pyspark = "3.5.3"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
tomli = "2.0.2"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uuid = "1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
